--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Runningsloths/fortem-server#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "socket.io": "^2.3.0",
     "sqlite3": "^5.0.0",
