--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "socket.io": "^2.3.0",
     "sqlite3": "^5.0.0",
     "uuid": "^8.2.0"
